@@ -29,6 +29,12 @@ defined('MOODLE_INTERNAL') || die();
 $ADMIN->add('editoratto', new admin_category('atto_recordrtc', new lang_string('pluginname', 'atto_recordrtc')));
 
 if ($ADMIN->fulltree) {
+
+// XTEC ************ AFEGIT - Allow access only to xtecadmin user
+// 2019.11.07 @aginard
+if (get_protected_agora()) {
+//************ FI
+
     // Types allowed.
     $options = array(
         'both' => new lang_string('audioandvideo', 'atto_recordrtc'),
@@ -40,6 +46,11 @@ if ($ADMIN->fulltree) {
     $default = 'both';
     $setting = new admin_setting_configselect('atto_recordrtc/allowedtypes', $name, $desc, $default, $options);
     $settings->add($setting);
+
+// XTEC ************ AFEGIT - Allow access only to xtecadmin user
+// 2019.11.07 @aginard
+}
+//************ FI
 
     // Audio bitrate.
     $name = get_string('audiobitrate', 'atto_recordrtc');
